@@ -1,3 +1,11 @@
+2004-02-18 Baptiste Lepilleur <gaiacrtn@free.fr>
+
+  * configure.in:
+  * config/ax_cxx_gcc_abi_demangle.m4:
+  * src/cppunit/TypeInfoHelper.cpp: added patch from 
+    Neil Ferguson <nferguso@eso.org> to use gcc c++ abi to demangle typeinfo
+	name when available.
+
 2003-05-15 Baptiste Lepilleur <gaiacrtn@free.fr>
 
   * include/cppunit/plugin/testplugin.h: fixed bug #767358, wrong
